force-app/main/default/objects/Assessment_Criteria__c/Assessment_Criteria__c.object-meta.xml
<CustomObject>
    <description>Contains the score for 1 criteria for 1 assessor for an assessment</description>
    <label>Assessment Criteria</label>
    <nameField>
        <label>Assessment Criteria Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assessment Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>