force-app/main/default/objects/Assessment_Criteria__c/fields/Assessment_Criteria_Definition__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Criteria_Definition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assessment Criteria Definition</label>
    <referenceTo>Assessment_Criteria_Definition__c</referenceTo>
    <relationshipLabel>Assessment Criteria</relationshipLabel>
    <relationshipName>Assessment_Criteria</relationshipName>
    <type>Lookup</type>
</CustomField>