force-app/main/default/objects/Assessment_Criteria__c/fields/Selected_Picklist_Value__c.field-meta.xml
<CustomField>
    <fullName>Selected_Picklist_Value__c</fullName>
    <label>Selected Picklist Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>