force-app/main/default/objects/Assessment_Criteria__c/validationRules/Maximum_Rating.validationRule-meta.xml
<ValidationRule>
    <fullName>Maximum_Rating</fullName>
    <active>true</active>
    <errorConditionFormula>Rating__c &gt; 10</errorConditionFormula>
    <errorDisplayField>Rating__c</errorDisplayField>
    <errorMessage>The maximum value is 10</errorMessage>
</ValidationRule>